Feat: add progress tracking on Book, Article, Customcontent (#166)
* Fix: remove unnecessary parameters from image URLs

* Docs: unify progress APIs with chunkId-only approach for all content types

* Feat: implement unified progress APIs with chunkId-only approach and real user auth

* Refactor: enhance progress APIs with safety checks and optimizations

* Fix: add branch to test cicd for test

* Feat: add progress filtering and isCompleted field to all content APIs

* Feat: implement unified progress tracking across all content types

* Refactor: migrate progress filtering from String to ProgressStatus enum

* Refactor: remove useless ProgressStatus method

* Feat: add progress tracking and filtering for Books and Chapters

* Feat: extract and store domain from originUrl in CustomContentRequest