@@ -2,11 +2,17 @@ package com.linglevel.api.content.article.service;
 
 import com.linglevel.api.common.dto.PageResponse;
 import com.linglevel.api.content.common.DifficultyLevel;
+import com.linglevel.api.content.common.ProgressStatus;
 import com.linglevel.api.content.article.dto.*;
 import com.linglevel.api.content.article.entity.Article;
 import com.linglevel.api.content.article.exception.ArticleErrorCode;
 import com.linglevel.api.content.article.exception.ArticleException;
 import com.linglevel.api.content.article.repository.ArticleRepository;
+import com.linglevel.api.content.article.repository.ArticleProgressRepository;
+import com.linglevel.api.content.article.entity.ArticleProgress;
+import com.linglevel.api.user.entity.User;
+import com.linglevel.api.user.repository.UserRepository;
+import java.util.stream.Collectors;
 import com.linglevel.api.s3.service.S3AiService;
 import com.linglevel.api.s3.service.S3TransferService;
 import com.linglevel.api.s3.service.S3UrlService;
@@ -32,6 +38,8 @@ import java.util.List;
 public class ArticleService {
 
     private final ArticleRepository articleRepository;
+    private final ArticleProgressRepository articleProgressRepository;
+    private final UserRepository userRepository;
     private final ArticleImportService articleImportService;
     private final ArticleReadingTimeService articleReadingTimeService;
     private final S3AiService s3AiService;
@@ -40,24 +48,33 @@ public class ArticleService {
     private final ImageResizeService imageResizeService;
     private final ArticlePathStrategy articlePathStrategy;
 
-    public PageResponse<ArticleResponse> getArticles(GetArticlesRequest request) {
+    public PageResponse<ArticleResponse> getArticles(GetArticlesRequest request, String username) {
         validateGetArticlesRequest(request);
         
         Pageable pageable = createPageable(request);
         Page<Article> articlePage = findArticles(request, pageable);
         
+        // 사용자 ID 조회
+        String userId = getUserId(username);
+
         List<ArticleResponse> articleResponses = articlePage.getContent().stream()
-                .map(this::convertToArticleResponse)
-                .toList();
+                .map(article -> convertToArticleResponse(article, userId))
+                .collect(Collectors.toList());
+
+        // 진도별 필터링
+        if (request.getProgress() != null && userId != null) {
+            articleResponses = filterByProgress(articleResponses, request.getProgress());
+        }
         
         return PageResponse.of(articlePage, articleResponses);
     }
 
-    public ArticleResponse getArticle(String articleId) {
+    public ArticleResponse getArticle(String articleId, String username) {
         Article article = articleRepository.findById(articleId)
                 .orElseThrow(() -> new ArticleException(ArticleErrorCode.ARTICLE_NOT_FOUND));
         
-        return convertToArticleResponse(article);
+        String userId = getUserId(username);
+        return convertToArticleResponse(article, userId);
     }
 
     @Transactional
@@ -175,7 +192,50 @@ public class ArticleService {
         return article;
     }
 
-    private ArticleResponse convertToArticleResponse(Article article) {
+    private String getUserId(String username) {
+        if (username == null) return null;
+        return userRepository.findByUsername(username)
+            .map(User::getId)
+            .orElse(null);
+    }
+
+    private List<ArticleResponse> filterByProgress(List<ArticleResponse> responses, ProgressStatus progressFilter) {
+        if (progressFilter == null) {
+            return responses; // No filter, return all
+        }
+
+        return responses.stream()
+            .filter(article -> switch (progressFilter) {
+                case NOT_STARTED -> article.getProgressPercentage() == 0.0;
+                case IN_PROGRESS -> article.getProgressPercentage() > 0.0 && !article.getIsCompleted();
+                case COMPLETED -> article.getIsCompleted();
+            })
+            .collect(Collectors.toList());
+    }
+
+    private ArticleResponse convertToArticleResponse(Article article, String userId) {
+        // 진도 정보 조회
+        int currentReadChunkNumber = 0;
+        double progressPercentage = 0.0;
+        boolean isCompleted = false;
+
+        if (userId != null) {
+            ArticleProgress progress = articleProgressRepository
+                .findByUserIdAndArticleId(userId, article.getId())
+                .orElse(null);
+
+            if (progress != null) {
+                currentReadChunkNumber = progress.getCurrentReadChunkNumber() != null
+                    ? progress.getCurrentReadChunkNumber() : 0;
+
+                if (article.getChunkCount() != null && article.getChunkCount() > 0) {
+                    progressPercentage = (double) currentReadChunkNumber / article.getChunkCount() * 100.0;
+                }
+
+                isCompleted = currentReadChunkNumber >= article.getChunkCount();
+            }
+        }
+
         ArticleResponse response = new ArticleResponse();
         response.setId(article.getId());
         response.setTitle(article.getTitle());
@@ -183,6 +243,9 @@ public class ArticleService {
         response.setCoverImageUrl(article.getCoverImageUrl());
         response.setDifficultyLevel(article.getDifficultyLevel());
         response.setChunkCount(article.getChunkCount());
+        response.setCurrentReadChunkNumber(currentReadChunkNumber);
+        response.setProgressPercentage(progressPercentage);
+        response.setIsCompleted(isCompleted);
         response.setReadingTime(article.getReadingTime());
         response.setAverageRating(article.getAverageRating());
         response.setReviewCount(article.getReviewCount());
@@ -190,5 +253,14 @@ public class ArticleService {
         response.setTags(article.getTags());
         response.setCreatedAt(article.getCreatedAt());
         return response;
+    }
+
+    public boolean existsById(String articleId) {
+        return articleRepository.existsById(articleId);
+    }
+
+    public Article findById(String articleId) {
+        return articleRepository.findById(articleId)
+                .orElseThrow(() -> new ArticleException(ArticleErrorCode.ARTICLE_NOT_FOUND));
     }
 }
